Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10124

lnetctl: lnetctl import --add not importing peers correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0, Lustre 2.10.7
    • Lustre 2.10.0, Lustre 2.10.1, Lustre 2.11.0
    • Centos 7.4

      When importing a yaml config file for peers the import does not correctly set the Multi-Rail property when it is false.

      An example:

      peer:
          - primary nid: 10.112.1.60@o2ib8
            Multi-Rail: False
            peer ni:
              - nid: 10.112.1.60@o2ib8
                state: up
      

      When imported it results in a running config of:

      peer:
          - primary nid: 10.112.1.60@o2ib8
            Multi-Rail: True
            peer ni:
              - nid: 10.112.1.60@o2ib8
                state: up
      

      For our config this isn't an issue yet, but as we will have a mix of multi-rail and non-multi-rail nodes this could be an issue moving forward.

            sharmaso Sonia Sharma (Inactive)
            mhaakddn Malcolm Haak - NCI (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: